--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,5 @@ services:
       - spring.datasource.url=jdbc:oracle:thin:@fullstack3_high?TNS_ADMIN=/app/oracle_wallet/
       - spring.datasource.username=ADMIN
       - spring.datasource.password=OracleCloud12321
+      - cors.allowed-origins=http://localhost:4200,https://tu-dominio-en-la-nube.com
     restart: always
